--- a/styles/main.css
+++ b/styles/main.css
@@ -106,16 +106,18 @@ img {
 
 .welcome {
   margin-bottom: 11.1111111111rem;
+  position: relative;
+  overflow: hidden;
 }
 .welcome::after {
   content: url("./../images/welcomeDecor.png");
   position: absolute;
-  width: 40.9%;
+  width: 41px;
   height: 100%;
   top: 18.8%;
   bottom: 0px;
   left: 59%;
-  z-index: 1;
+  z-index: -1;
 }
 
 .welcome__content {
@@ -264,8 +266,8 @@ img {
   border-radius: 15px;
   max-width: 27.6111111111rem;
   background: #283036;
-  -webkit-box-shadow: 5px 12px 16px -11px rgb(0, 0, 0);
-          box-shadow: 5px 12px 16px -11px rgb(0, 0, 0);
+  -webkit-box-shadow: 5px 12px 16px -11px black;
+          box-shadow: 5px 12px 16px -11px black;
   margin-bottom: 6.1111111111rem;
 }
 .find-line::before {
@@ -355,7 +357,7 @@ img {
 }
 .tool__item:hover::after {
   position: absolute;
-  content: url(../../images/icons/decorItem.svg);
+  content: url(./../images/icons/decorItem.svg);
   top: 0;
   right: 0;
 }
@@ -379,6 +381,15 @@ img {
 }
 .tool__item:hover .tool__like:hover {
   background: #283036;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .tool__item:hover .tool__like:hover img {
   content: url(./../images/icons/like-hov.svg);
@@ -412,7 +423,7 @@ img {
 
 .tool__name {
   font-size: 1.3888888889rem;
-  color: rgb(255, 255, 255);
+  color: white;
   opacity: 55%;
   font-weight: 500;
 }
@@ -425,7 +436,7 @@ img {
   margin-top: 1.6666666667rem;
   margin-bottom: 1.6666666667rem;
   font-size: 0.8888888889rem;
-  color: rgb(255, 255, 255);
+  color: white;
   opacity: 55%;
   -webkit-transition: 0.5s;
   transition: 0.5s;
@@ -788,9 +799,34 @@ img {
   display: flex;
 }
 
-.slider__right-controls {
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
+.slider__control {
+  padding: 26px 16px;
+}
+
+.slider__control--left, .slider__control--right {
+  width: 24px;
+  height: 24px;
+  border-top: 3px solid rgba(255, 255, 255, 0.28);
+  border-right: 3px solid rgba(255, 255, 255, 0.28);
+  margin-right: 24px;
+}
+
+.slider__control--right {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+.slider__control--right:hover {
+  border-top: 3px solid #FF6E30;
+  border-right: 3px solid #FF6E30;
+}
+
+.slider__control--left {
+  -webkit-transform: rotate(-135deg);
+          transform: rotate(-135deg);
+}
+.slider__control--left:hover {
+  border-top: 3px solid #FF6E30;
+  border-right: 3px solid #FF6E30;
 }
 
 .down-controls__list {
@@ -803,13 +839,13 @@ img {
 }
 .down-controls__list .active {
   height: 8px;
-  background: rgb(255, 110, 48);
+  background: #ff6e30;
 }
 
 .down-controls__item {
   width: 44px;
   height: 6px;
-  background: rgb(40, 48, 54);
+  background: #283036;
   margin-right: 18px;
   border-radius: 4px;
 }
@@ -863,7 +899,7 @@ img {
   border-radius: 15px;
   align-items: center;
   padding: 8px 12px 8px 24px;
-  background: rgb(40, 48, 54);
+  background: #283036;
   width: 44%;
 }
 .feedback__form::before {
